# MetaStuff

./: CMakeLists.txt
example/: Person.h  main.cpp
